# drf-triad-permissions

./: .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
.github/workflows/: code.yaml  linters.yaml
drf_triad_permissions/: __init__.py  matching.py  permissions.py  policies.py  settings.py  utils.py  views.py
drf_triad_permissions/templates/drf_triad_permissions/: code.js.tpl
drf_triad_permissions/templates/triad_permissions/: code.js.tpl
triads_sandbox/: manage.py  settings.py  urls.py
triads_sandbox/basic/: models.py  policies.py  serializers.py  viewsets.py
triads_sandbox/basic/migrations/: 0001_initial.py
triads_sandbox/tests/: test_matching.py  test_permissions.py  test_utils.py
triads_sandbox/triads_sandbox/: asgi.py  settings.py  urls.py  wsgi.py
