[tool.poetry]
name = "drf-triad-permissions"
version = "0.1.0"
description = "DRF viewset permissions through triads"
authors = ["Lorenzo Peña <lorinkoz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = ">=2.0,<4.0"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = {extras = ["toml"], version = "^5.1"}

[tool.black]
line-length = 120

[tool.coverage.run]
source = ["drf_triad_permissions"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
